force-app/main/default/objects/Account/fields/CREATOR__c.field-meta.xml
<CustomField>
    <fullName>CREATOR__c</fullName>
    <label>CREATOR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>