force-app/main/default/objects/Account/fields/CSOC_DATE__c.field-meta.xml
<CustomField>
    <fullName>CSOC_DATE__c</fullName>
    <label>CSOC_DATE</label>
    <type>Date</type>
</CustomField>