force-app/main/default/objects/Account/fields/Pole__c.field-meta.xml
<CustomField>
    <fullName>Pole__c</fullName>
    <label>Pole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pole</valueSetName>
    </valueSet>
</CustomField>